[package]
name = "nullscan"
version = "1.5.0"
edition = "2021"
authors = ["Nullgrimoire <null.grimoire.mage@gmail.com>"]
description = "A fast, cross-platform Rust tool for scanning TCP ports and grabbing service banners"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nullgrimoire/NullScan"
keywords = ["network", "security", "port-scanner", "tcp", "reconnaissance"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
ipnet = "2.9"
regex = "1.11.1"
num_cpus = "1.16"
# Web dashboard dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
